# audioSyncPlay

./: CMakeLists.txt  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  TESTING_CHECKLIST.md  WEEK3_TESTING_CHECKLIST.md  advanced_test.bat  build.bat  optimization_plan.md  plan.md  quick_test.bat  setup.bat  test.bat  test_audio_quality.bat  test_jitter_buffer.bat  test_multi_device_sync.bat  test_network.bat  test_optimization_verification.bat  test_sender.bat
include/: audio_capture.h  audio_playback.h  clock_sync.h  config.h  jitter_buffer.h  logger.h  network_udp.h
src/: audio_capture.cpp  audio_playback.cpp  clock_sync.cpp  config.cpp  jitter_buffer.cpp  logger.cpp  main.cpp  network_udp.cpp  receiver.cpp  sender.cpp  test_audio_capture.cpp
